application: Launch new window in the current directory

When pressing Control+N, Nautilus should open the new window in the
same location as the current open one and fallback to the home
directory otherwise.

https://bugzilla.gnome.org/show_bug.cgi?id=772856