src/nautilus-application.c
@@ -707,14 +707,25 @@ action_new_window (GSimpleAction *action,
                    GVariant      *parameter,
                    gpointer       user_data)
 {
+    NautilusWindowSlot *active_slot = NULL;
+    NautilusWindow *active_window = NULL;
     GtkApplication *application = user_data;
-    GFile *home;
+    g_autoptr (GFile) current_location;
 
-    home = g_file_new_for_path (g_get_home_dir ());
-    nautilus_application_open_location_full (NAUTILUS_APPLICATION (application), home,
+    active_window = NAUTILUS_WINDOW (gtk_application_get_active_window (application));
+    if (active_window)
+    {
+        active_slot = nautilus_window_get_active_slot (active_window);
+        current_location = nautilus_window_slot_get_location (active_slot);
+    }
+    else
+    {
+        current_location = g_file_new_for_path (g_get_home_dir ());
+    }
+
+    nautilus_application_open_location_full (NAUTILUS_APPLICATION (application), current_location,
                                              NAUTILUS_WINDOW_OPEN_FLAG_NEW_WINDOW, NULL, NULL, NULL);
 
-    g_object_unref (home);
 }
 
 static void
